<resources>
    <string name="app_name">Leaf Let\'s</string>

    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>

    <string name="username_key">usernameKey</string>
    <string name="password_key">passwordKey</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_vision">VisionActivity</string>

    <string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="btnIntend">Take Picture</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="buttonDone">Done</string>

    <!-- Wikipedia -->
    <string name="text_view_wikipedia_title">Title</string>
    <string name="text_view_wikipedia_url">URL</string>
</resources>
